--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -5,29 +5,22 @@ export FOGLAMP_SERVER=localhost
 export FOGLAMP_PORT=8081
 
 # Configurations related to FogLAMP
-export SCHEDULE_ID_OCS_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to OCS north") | .id'`
-
-# Related to the specific OCS account
-export OCS_TENANT="ocs_tenant_id"
-export OCS_CLIENT_ID="ocs_client_id"
-export OCS_CLIENT_SECRET="ocs_client_secret"
-
-# OCS namespace where the infomration are stored
-export OCS_NAMESPACE="ocs_namespace_0001"
-
-# Used to authenticate as a valid publisher and required to ingest data into OCS using OMF
-export OCS_TOKEN="ocs_north_0001"
-
+export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
+export SENDING_PROCESS_DATA=SEND_PR_1
+export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
-export OCS_TYPE_ID=0001
+export OMF_TYPE_ID=0001
+export OMF_PRODUCER_TOKEN=omf_north_${OMF_TYPE_ID}
+
+# PI server references
+export PI_SERVER=pi-server
+export PI_SERVER_PORT=5460
+export PI_SERVER_UID=pi-server-uid
+export PI_SERVER_PWD=pi-server-pwd
+export PI_SERVER_DATABASE=pi-server-db
 
 # Define the asset information
-export ASSET_CODE="fogbench_smoke_test"
+export ASSET_CODE="fogbench/smoke_test"
 
-# Define the asset information to retrieve from OCS
-export OCS_STREAM="measurement_${ASSET_CODE}"
-export START_TIMESTAMP="2018-01-01T00:00:00.000000Z"
-export VALUES_COUNT=10000
-
-# Maximum numbers of retries to attempt an operation (usually corresponds to 120 seconds)
-export RETRY_COUNT=120
+# Maximum numbers of retries to attempt an operation (usually corresponds to 600 seconds)
+export RETRY_COUNT=600
