FOGL-1112: Working stage

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -4,6 +4,15 @@
 export FOGLAMP_SERVER=localhost
 export FOGLAMP_PORT=8081
 
+# Temporary directory for the download operation
+export TMP_DIRECTORY=/tmp
+
+# FogLAMP package references
+# FIXME: to be changed with the proper values
+export FOGLAMP_SNAP=foglamp_1.1.1_amd64.snap
+export FOGLAMP_SNAP_PATH="https://s3.amazonaws.com/foglamp/snaps/x86_64/${FOGLAMP_SNAP}"
+export FOGLAMP_NAME=foglamp
+
 # Configurations related to FogLAMP
 export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
 export SENDING_PROCESS_DATA=SEND_PR_1
