--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -2,19 +2,27 @@
 
 # FogLAMP server references
 export FOGLAMP_SERVER=localhost
-export FOGLAMP_PORT=8081
+export FOGLAMP_HTTPPort=8081
+export FOGLAMP_HTTPsPort=1995
 
 # Temporary directory for the download operation
-export TMP_DIRECTORY=/tmp
+export TMP_DIRECTORY=/home/foglamp/tmp
+
+export CMD_WGET=" sudo classic wget "
+export CMD_CURL=" sudo classic curl "
+export CMD_JQ=" sudo classic jq "
+
 
 # FogLAMP package references
 # FIXME: to be changed with the proper values
-export FOGLAMP_SNAP=foglamp_1.1.1_amd64.snap
+#export FOGLAMP_SNAP=foglamp_1.1.1_amd64.snap
+export FOGLAMP_SNAP=base_foglamp_1.1.2_amd64.snap
 export FOGLAMP_SNAP_PATH="https://s3.amazonaws.com/foglamp/snaps/x86_64/${FOGLAMP_SNAP}"
 export FOGLAMP_NAME=foglamp
 
 # Configurations related to FogLAMP
-export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
+# FIXME:
+# export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
 export SENDING_PROCESS_DATA=SEND_PR_1
 export SENDING_PROCESS_STAT=SEND_PR_2o
 # Identifies sensors and measurements types
