FOGL-1115: Final version - Implemented updates test, code finalization.

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,30 +1,34 @@
 #!/bin/bash
 
+# Environment in which the tests suite is executed {ucore|userver|raspbian|rcore}
+export EXECUTION_ENV=ucore
+
 # FogLAMP server references
 export FOGLAMP_SERVER=localhost
 export FOGLAMP_HTTPPort=8081
 export FOGLAMP_HTTPsPort=1995
 
-# Temporary directory for the download operation
+# Temporary directory for the operations related to the snaps
 export TMP_DIRECTORY=/home/foglamp/tmp
+export SNAPS_DIRECTORY=${TMP_DIRECTORY}/snaps/x86_64
 
+# Commands to be used
 export CMD_WGET=" sudo classic wget "
 export CMD_CURL=" sudo classic curl "
 export CMD_JQ=" sudo classic jq "
 
 
 # FogLAMP package references
-# FIXME: to be changed with the proper values
-#export FOGLAMP_SNAP=foglamp_1.1.1_amd64.snap
-export FOGLAMP_SNAP=base_foglamp_1.1.2_amd64.snap
-export FOGLAMP_SNAP_PATH="https://s3.amazonaws.com/foglamp/snaps/x86_64/${FOGLAMP_SNAP}"
 export FOGLAMP_NAME=foglamp
+export FOGLAMP_SNAP_VERSION=x.x.x
+export FOGLAMP_SNAP_UPDATE_VERSION=x.x.x
+export FOGLAMP_SNAP=foglamp_${FOGLAMP_SNAP_VERSION}_amd64.snap
+export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_amd64.snap
+export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/x86_64/
 
 # Configurations related to FogLAMP
-# FIXME:
-# export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_PORT}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
 export SENDING_PROCESS_DATA=SEND_PR_1
-export SENDING_PROCESS_STAT=SEND_PR_2o
+export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
 export OMF_TYPE_ID=0001
 export OMF_PRODUCER_TOKEN=omf_north_${OMF_TYPE_ID}
