FOGL-1115: added os arch handling

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -3,6 +3,20 @@
 # Environment in which the tests suite is executed {ucore|userver|raspbian|rcore}
 export EXECUTION_ENV=ucore
 
+# Gets the system arch and evaluates the names to apply
+ARCH_OS=`arch`
+if [[ "${ARCH_OS}" == "armv7l" ]]; then
+
+    ARCH_DIR_NAME="armhf"
+    ARCH_FILE_NAME="armhf"
+fi
+
+if [[ "${ARCH_OS}" == "x86_64" ]]; then
+
+    ARCH_DIR_NAME="x86_64"
+    ARCH_FILE_NAME="amd64"
+fi
+
 # FogLAMP server references
 export FOGLAMP_SERVER=localhost
 export FOGLAMP_HTTPPort=8081
@@ -10,7 +24,7 @@ export FOGLAMP_HTTPsPort=1995
 
 # Temporary directory for the operations related to the snaps
 export TMP_DIRECTORY=/home/foglamp/tmp
-export SNAPS_DIRECTORY=${TMP_DIRECTORY}/snaps/x86_64
+export SNAPS_DIRECTORY=${TMP_DIRECTORY}/snaps/${ARCH_DIR_NAME}
 
 # Commands to be used
 export CMD_WGET=" sudo classic wget "
@@ -22,9 +36,9 @@ export CMD_JQ=" sudo classic jq "
 export FOGLAMP_NAME=foglamp
 export FOGLAMP_SNAP_VERSION=x.x.x
 export FOGLAMP_SNAP_UPDATE_VERSION=x.x.x
-export FOGLAMP_SNAP=foglamp_${FOGLAMP_SNAP_VERSION}_amd64.snap
-export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_amd64.snap
-export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/x86_64/
+export FOGLAMP_SNAP=foglamp_${FOGLAMP_SNAP_VERSION}_${ARCH_FILE_NAME}.snap
+export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_${ARCH_FILE_NAME}.snap
+export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}/
 
 # Configurations related to FogLAMP
 export SENDING_PROCESS_DATA=SEND_PR_1
