FOGL-1140: - 0250_CA_app_discoverability, Working stage but it works

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,7 +1,9 @@
 #!/bin/bash
 
 # Environment in which the tests suite is executed {ucore|userver|raspbian|rcore}
-export EXECUTION_ENV=ucore
+# FIXME:
+#export EXECUTION_ENV=ucore
+export EXECUTION_ENV=userver
 
 # Gets the system arch and evaluates the names to apply
 ARCH_OS=`arch`
@@ -21,16 +23,11 @@ fi
 export FOGLAMP_SERVER=localhost
 export FOGLAMP_HTTPPort=8081
 export FOGLAMP_HTTPsPort=1995
+export FOGLAMP_AVAHI_STRING='_foglamp-user._tcp'
 
 # Temporary directory for the operations related to the snaps
 export TMP_DIRECTORY=/home/foglamp/tmp
 export SNAPS_DIRECTORY=${TMP_DIRECTORY}/snaps/${ARCH_DIR_NAME}
-
-# Commands to be used
-export CMD_WGET=" sudo classic wget "
-export CMD_CURL=" sudo classic curl "
-export CMD_JQ=" sudo classic jq "
-
 
 # FogLAMP package references
 export FOGLAMP_NAME=foglamp
@@ -42,14 +39,7 @@ export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}
 
 # Configurations related to FogLAMP
 
-# Retrieves the schedule ID of the OMF plugin
-sudo classic << EOF                                                                                                     >> ${RESULT_DIR}/$TEST_NAME.1.temp 2>> ${RESULT_DIR}/$TEST_NAME.2.temp
-curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_HTTPPort}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id' > ${RESULT_DIR}/suite_cfg.temp
-logout
-EOF
-SCHEDULE_ID_OMF_PLUGIN=`cat ${RESULT_DIR}/suite_cfg.temp`
 
-export SCHEDULE_ID_OMF_PLUGIN=2b614d26-760f-11e7-b5a5-be2e44b06b34
 export SENDING_PROCESS_DATA=SEND_PR_1
 export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
@@ -66,7 +56,46 @@ export PI_SERVER_DATABASE=osidatabase
 
 
 # Define the asset information
-export ASSET_CODE="fogbench_smoke_test"
+export ASSET_CODE="SOW_fogbench_test"
 
 # Maximum numbers of retries to attempt an operation (usually corresponds to 600 seconds)
+# FIXME:
 export RETRY_COUNT=600
+
+#
+# Configurations related to the execution environment
+#
+if [[ "${EXECUTION_ENV}" == "userver" || "${EXECUTION_ENV}" == "raspbian" ]]; then
+
+    # Commands to be used
+    export CMD_WGET=" wget "
+    export CMD_CURL=" curl "
+    export CMD_JQ=" jq "
+    export CMD_AVBROWSE="avahi-browse"
+
+    # Retrieves the schedule ID of the OMF plugin
+    export SCHEDULE_ID_OMF_PLUGIN=`curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_HTTPPort}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id'`
+
+elif [[ "${EXECUTION_ENV}" == "ucore" ]]; then
+
+    # Commands to be used
+    export CMD_WGET=" sudo classic wget "
+    export CMD_CURL=" sudo classic curl "
+    export CMD_JQ=" sudo classic jq "
+    # FIXME: to be changed
+    export CMD_AVBROWSE="avahi-browse"
+
+    # Retrieves the schedule ID of the OMF plugin
+    sudo classic << EOF                                                                                                     >> ${RESULT_DIR}/$TEST_NAME.1.temp 2>> ${RESULT_DIR}/$TEST_NAME.2.temp
+    curl -s -X GET http://${FOGLAMP_SERVER}:${FOGLAMP_HTTPPort}/foglamp/schedule | jq --raw-output '.schedules | .[] | select(.name=="OMF to PI north") | .id' > ${RESULT_DIR}/suite_cfg.temp
+    logout
+EOF
+    # Retrieves the schedule ID of the OMF plugin
+    if [[ -f "${RESULT_DIR}/suite_cfg.temp" ]]; then
+        export SCHEDULE_ID_OMF_PLUGIN=`cat ${RESULT_DIR}/suite_cfg.temp`
+    else
+        export SCHEDULE_ID_OMF_PLUGIN=none
+    fi
+
+fi
+
