FOGL-1140: 0250_CA_app_discoverability, Final version.

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,7 +1,6 @@
 #!/bin/bash
 
 # Environment in which the tests suite is executed {ucore|userver|raspbian|rcore}
-# FIXME:
 #export EXECUTION_ENV=ucore
 export EXECUTION_ENV=userver
 
@@ -59,7 +58,6 @@ export PI_SERVER_DATABASE=osidatabase
 export ASSET_CODE="SOW_fogbench_test"
 
 # Maximum numbers of retries to attempt an operation (usually corresponds to 600 seconds)
-# FIXME:
 export RETRY_COUNT=600
 
 #
@@ -82,8 +80,7 @@ elif [[ "${EXECUTION_ENV}" == "ucore" ]]; then
     export CMD_WGET=" sudo classic wget "
     export CMD_CURL=" sudo classic curl "
     export CMD_JQ=" sudo classic jq "
-    # FIXME: to be changed
-    export CMD_AVBROWSE="avahi-browse"
+    export CMD_AVBROWSE=" avahi-client.browse "
 
     # Retrieves the schedule ID of the OMF plugin
     sudo classic << EOF                                                                                                     >> ${RESULT_DIR}/$TEST_NAME.1.temp 2>> ${RESULT_DIR}/$TEST_NAME.2.temp
