--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-# Environment in which the tests suite is executed {ucore|userver|raspbian|rcore}
+# Environment in which the tests suite is executed {ucore|userver}
 #export EXECUTION_ENV=ucore
 export EXECUTION_ENV=userver
 
@@ -37,14 +37,11 @@ export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_${ARCH_FILE_NA
 export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}/
 
 # Configurations related to FogLAMP
-
-
 export SENDING_PROCESS_DATA=SEND_PR_1
 export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
-export OMF_TYPE_ID=2512
-export OMF_PRODUCER_TOKEN=omf_ucore_${OMF_TYPE_ID}
-
+export OMF_TYPE_ID=2600
+export OMF_PRODUCER_TOKEN=SOW_ucore_${OMF_TYPE_ID}
 
 # PI server references
 export PI_SERVER=WIN-4M7ODKB0RH2
@@ -52,7 +49,6 @@ export PI_SERVER_PORT=5460
 export PI_SERVER_UID=Administrator
 export PI_SERVER_PWD=FogLamp200
 export PI_SERVER_DATABASE=osidatabase
-
 
 # Define the asset information
 export ASSET_CODE="SOW_fogbench_test"
