FOGL-1136,1137: Initial stage.

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,8 +1,7 @@
 #!/bin/bash
 
 # Environment in which the tests suite is executed {ucore|userver}
-#export EXECUTION_ENV=ucore
-export EXECUTION_ENV=userver
+export EXECUTION_ENV=ucore
 
 # Gets the system arch and evaluates the names to apply
 ARCH_OS=`arch`
