--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -2,6 +2,7 @@
 
 # Environment in which the tests suite is executed {ucore|userver}
 export EXECUTION_ENV=ucore
+#export EXECUTION_ENV=userver
 
 # Gets the system arch and evaluates the names to apply
 ARCH_OS=`arch`
