--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -1,8 +1,11 @@
 #!/bin/bash
 
+# Global constants declaration
+declare RESULT_DIR
+declare TEST_NAME
+
 # Environment in which the tests suite is executed {ucore|userver}
 export EXECUTION_ENV=ucore
-#export EXECUTION_ENV=userver
 
 # Gets the system arch and evaluates the names to apply
 ARCH_OS=`arch`
@@ -30,8 +33,8 @@ export SNAPS_DIRECTORY=${TMP_DIRECTORY}/snaps/${ARCH_DIR_NAME}
 
 # FogLAMP package references
 export FOGLAMP_NAME=foglamp
-export FOGLAMP_SNAP_VERSION=1.2.0
-export FOGLAMP_SNAP_UPDATE_VERSION=1.2.1
+export FOGLAMP_SNAP_VERSION=x.x.x
+export FOGLAMP_SNAP_UPDATE_VERSION=x.x.x
 export FOGLAMP_SNAP=foglamp_${FOGLAMP_SNAP_VERSION}_${ARCH_FILE_NAME}.snap
 export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_${ARCH_FILE_NAME}.snap
 export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}/
@@ -40,15 +43,16 @@ export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}
 export SENDING_PROCESS_DATA=SEND_PR_1
 export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
-export OMF_TYPE_ID=2601
+export OMF_TYPE_ID=0001
 export OMF_PRODUCER_TOKEN=SOW_ucore_${OMF_TYPE_ID}
 
 # PI server references
-export PI_SERVER=WIN-4M7ODKB0RH2
+export PI_SERVER=pi-server
 export PI_SERVER_PORT=5460
-export PI_SERVER_UID=Administrator
-export PI_SERVER_PWD=FogLamp200
-export PI_SERVER_DATABASE=osidatabase
+export PI_SERVER_UID=pi-server-uid
+export PI_SERVER_PWD=pi-server-pwd
+export PI_SERVER_DATABASE=pi-server-db
+
 
 # Define the asset information
 export ASSET_CODE="SOW_fogbench_test"
@@ -59,7 +63,7 @@ export RETRY_COUNT=600
 #
 # Configurations related to the execution environment
 #
-if [[ "${EXECUTION_ENV}" == "userver" || "${EXECUTION_ENV}" == "raspbian" ]]; then
+if [[ "${EXECUTION_ENV}" == "userver" ]]; then
 
     # Commands to be used
     export CMD_WGET=" wget "
@@ -91,4 +95,3 @@ EOF
     fi
 
 fi
-
