--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -13,12 +13,15 @@ if [[ "${ARCH_OS}" == "armv7l" ]]; then
 
     ARCH_DIR_NAME="armhf"
     ARCH_FILE_NAME="armhf"
-fi
 
-if [[ "${ARCH_OS}" == "x86_64" ]]; then
+elif [[ "${ARCH_OS}" == "x86_64" ]]; then
 
     ARCH_DIR_NAME="x86_64"
     ARCH_FILE_NAME="amd64"
+else
+
+    echo ERROR : the :${ARCH_OS}: is an unsupported architecture, the supported ones are :x86_64: and :armv7l:.
+    exit 1
 fi
 
 # FogLAMP server references
