FOGL-1211-1212: Working stage

--- a/tests/system/suites/SOW/suite.cfg
+++ b/tests/system/suites/SOW/suite.cfg
@@ -13,12 +13,15 @@ if [[ "${ARCH_OS}" == "armv7l" ]]; then
 
     ARCH_DIR_NAME="armhf"
     ARCH_FILE_NAME="armhf"
-fi
 
-if [[ "${ARCH_OS}" == "x86_64" ]]; then
+elif [[ "${ARCH_OS}" == "x86_64" ]]; then
 
     ARCH_DIR_NAME="x86_64"
     ARCH_FILE_NAME="amd64"
+else
+
+    echo ERROR : the :${ARCH_OS}: is an unsupported architecture, the supported ones are :x86_64: and :armv7l:.
+    exit 1
 fi
 
 # FogLAMP server references
@@ -34,8 +37,8 @@ export BACKUPS_DIR=/home/foglamp/snap/foglamp/common/backup
 
 # FogLAMP package references
 export FOGLAMP_NAME=foglamp
-export FOGLAMP_SNAP_VERSION=x.x.x
-export FOGLAMP_SNAP_UPDATE_VERSION=x.x.x
+export FOGLAMP_SNAP_VERSION=2.0.3
+export FOGLAMP_SNAP_UPDATE_VERSION=2.1.3
 export FOGLAMP_SNAP=foglamp_${FOGLAMP_SNAP_VERSION}_${ARCH_FILE_NAME}.snap
 export FOGLAMP_SNAP_UPDATE=foglamp_${FOGLAMP_SNAP_UPDATE_VERSION}_${ARCH_FILE_NAME}.snap
 export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}/
@@ -44,15 +47,15 @@ export FOGLAMP_SNAP_PATH=https://s3.amazonaws.com/foglamp/snaps/${ARCH_DIR_NAME}
 export SENDING_PROCESS_DATA=SEND_PR_1
 export SENDING_PROCESS_STAT=SEND_PR_2
 # Identifies sensors and measurements types
-export OMF_TYPE_ID=0001
+export OMF_TYPE_ID=8001
 export OMF_PRODUCER_TOKEN=SOW_ucore_${OMF_TYPE_ID}
 
 # PI server references
-export PI_SERVER=pi-server
+export PI_SERVER=WIN-4M7ODKB0RH2
 export PI_SERVER_PORT=5460
-export PI_SERVER_UID=pi-server-uid
-export PI_SERVER_PWD=pi-server-pwd
-export PI_SERVER_DATABASE=pi-server-db
+export PI_SERVER_UID=Administrator
+export PI_SERVER_PWD=FogLamp200
+export PI_SERVER_DATABASE=osidatabase
 
 # Define the asset information
 export ASSET_CODE="SOW_fogbench_test"
