FOGL-1672 - make naming consistant for C++ plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,19 @@ add_subdirectory(C/plugins/storage/postgres)
 add_subdirectory(C/plugins/storage/sqlite)
 add_subdirectory(C/plugins/storage/sqlitememory)
 add_subdirectory(C/services/south)
-add_subdirectory(C/plugins/south/dummy)
+add_subdirectory(C/plugins/south/foglamp-dummy)
 find_library(WiringPi wiringPi)
 if (WiringPi)
-	add_subdirectory(C/plugins/south/ina219)
-	add_subdirectory(C/plugins/south/dht11)
+	add_subdirectory(C/plugins/south/foglamp-ina219)
+	add_subdirectory(C/plugins/south/foglamp-dht11)
 endif()
 find_library(Modbus modbus)
 if (Modbus)
-	add_subdirectory(C/plugins/south/modbus)
+	add_subdirectory(C/plugins/south/foglamp-modbus)
+endif()
+set(BIODAQDIR $ENV{BIODAQDIR})
+if (BIODAQDIR)
+	add_subdirectory(C/plugins/south/foglamp-usb4704)
 endif()
 add_subdirectory(C/tasks/north)
 add_subdirectory(C/plugins/north/omf)
