--- a/C/plugins/south/foglamp-dht11/CMakeLists.txt
+++ b/C/plugins/south/foglamp-dht11/CMakeLists.txt
@@ -1,24 +1,23 @@
 cmake_minimum_required(VERSION 2.4.0)
 
-project(ina219)
+project(foglamp-dht11)
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(WIRING_PI_LIBS -lwiringPi -lwiringPiDev)
 set(COMMON_LIBS -lcommon-lib)
-set(WIRING_LIB -lwiringPi)
-
-# Find source files
-file(GLOB SOURCES *.cpp)
 
 # Include header files
-include_directories(include ../../../services/common/include ../common/include ../../../common/include ../../../thirdparty/rapidjson/include)
+include_directories(include ../../../services/common/include ../common/include ../../../common/include ../../../thirdparty/rapidjson/include /usr/local/include/)
 link_directories(${PROJECT_BINARY_DIR}/../../../lib)
+
+# Find source files
+file(GLOB SOURCES "*.cpp")
 
 # Create shared library
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${WIRING_PI_LIBS})
 target_link_libraries(${PROJECT_NAME} ${COMMON_LIBS})
-target_link_libraries(${PROJECT_NAME} ${WIRING_LIB})
-
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
 
 # Install library
