--- a/C/plugins/south/foglamp-ina219/CMakeLists.txt
+++ b/C/plugins/south/foglamp-ina219/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_minimum_required(VERSION 2.4.0)
 
-project(usb4704)
+project(foglamp-ina219)
 
-set(BIODAQDIR $ENV{BIODAQDIR})
-find_library(BIODAQLIB biodaq ${BIODAQDIR}/libs)
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(COMMON_LIBS -lcommon-lib)
+set(WIRING_LIB -lwiringPi)
 
 # Find source files
 file(GLOB SOURCES *.cpp)
 
 # Include header files
-include_directories(include ../../../services/common/include ../common/include ../../../common/include ../../../thirdparty/rapidjson/include ${BIODAQDIR}/inc)
-
-file(GLOB SOURCES "*.cpp" ../common/*.cpp)
+include_directories(include ../../../services/common/include ../common/include ../../../common/include ../../../thirdparty/rapidjson/include)
+link_directories(${PROJECT_BINARY_DIR}/../../../lib)
 
 # Create shared library
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${BIODAQLIB})
+target_link_libraries(${PROJECT_NAME} ${COMMON_LIBS})
+target_link_libraries(${PROJECT_NAME} ${WIRING_LIB})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
 
